# designpatterns

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
.timetracker/: config  start_designpatterns_dvklo.txt
designpatterns/simplefactory/: __init__.py  door.py  doorfactory.py  doormaker.py
examples/: accessmodifiers.py
examples/designpatterns/: __init__.py
examples/designpatterns/simplefactory/: doorfactory.py  doormaker.py
