# https://github.com/pypa/pip/issues/6334
[project]
name = "examples"
version = "0.0.1"
license = "AGPL-3.0-or-later"
requires-python = ">=3.8"
dynamic = [
    "readme",
    "description",
    "authors",
    "classifiers",
    "scripts",
    "dependencies",
]

[build-system]
requires = ["setuptools >= 46.3.0"]
build-backend = "setuptools.build_meta"
